# capstone-robot-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
app/: camera.py  main.py  models.py  oak_stream.py  rover_controller.py
capstone_robot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
httpx/: __init__.py
scripts/: autorun.sh  capstone-robot-api.service  fix-venv-permissions.sh  logging.ini  setup.sh
tests/: conftest.py  test_api.py  test_camera_service.py
